[package]
name = "sf-tech-events"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.94"
askama = "0.12.1"
axum = "0.7.9"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
